--- a/berlin-reuse-19/index.html
+++ b/berlin-reuse-19/index.html
@@ -32,8 +32,8 @@
 </section>
 
 <section>
-<section id="slide-orgd6e0da4">
-<h2 id="orgd6e0da4"><span class="section-number-2">1</span> Summary</h2>
+<section id="slide-org6aefcc0">
+<h2 id="org6aefcc0"><span class="section-number-2">1</span> Summary</h2>
 <ul>
 <li>Motivation</li>
 <li>Dataset</li>
@@ -46,15 +46,15 @@
 </section>
 </section>
 <section>
-<section id="slide-orga4cbd90">
-<h2 id="orga4cbd90"><span class="section-number-2">2</span> Introduction &amp; Motivation</h2>
+<section id="slide-org63a566a">
+<h2 id="org63a566a"><span class="section-number-2">2</span> Introduction &amp; Motivation</h2>
 <div class="outline-text-2" id="text-2">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org2536061">
-<h3 id="org2536061">Intertextuality (Orr, Allen)</h3>
+<section id="slide-orgf47352a">
+<h3 id="orgf47352a">Intertextuality (Orr, Allen)</h3>
 <ul>
 <li class="fragment roll-in">Networked view: a web in which each text is embedded</li>
 <li class="fragment roll-in">Influential across schools and periods since Kristeva (60s)</li>
@@ -72,8 +72,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgb44c5e0">
-<h3 id="orgb44c5e0">Digital Literary Studies</h3>
+<section id="slide-orgb87655c">
+<h3 id="orgb87655c">Digital Literary Studies</h3>
 <ul>
 <li class="fragment roll-in">Intertextuality is practically intractable
 <ul>
@@ -88,8 +88,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org87b6b3c">
-<h3 id="org87b6b3c">Text Reuse Detection</h3>
+<section id="slide-orgb8eed67">
+<h3 id="orgb8eed67">Text Reuse Detection</h3>
 <ul>
 <li class="fragment roll-in">Previous work:
 <ul>
@@ -111,8 +111,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org228f7b7">
-<h2 id="org228f7b7"><span class="section-number-2">3</span> Dataset</h2>
+<section id="slide-org6bc8828">
+<h2 id="org6bc8828"><span class="section-number-2">3</span> Dataset</h2>
 <ul>
 <li class="fragment roll-in">BiblIndex (thanks to Laurence Mellerin): ongoing work on digital edition of Bernard</li>
 <li class="fragment roll-in">86 Sermones (<code>xml</code> following <code>TEI</code> guidelines; ± 165k tokens)</li>
@@ -127,8 +127,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org3546784">
-<h3 id="org3546784">Dataset Statistics</h3>
+<section id="slide-orge34d187">
+<h3 id="orge34d187">Dataset Statistics</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -164,13 +164,13 @@
 </section>
 </section>
 <section>
-<section id="slide-org3ce0534">
-<h3 id="org3ce0534">Examples</h3>
-<div class="outline-text-3" id="text-org3ce0534">
+<section id="slide-org4cde409">
+<h3 id="org4cde409">Examples</h3>
+<div class="outline-text-3" id="text-org4cde409">
 </div>
 </section>
-<section id="slide-org80bd502">
-<h4 id="org80bd502">Allusive Text Reuse Example 1</h4>
+<section id="slide-orgd8eb50e">
+<h4 id="orgd8eb50e">Allusive Text Reuse Example 1</h4>
 <ul>
 <li>Bernard (Sermo19.7.a) &ldquo;<b>parvulae</b> quippe in <b>Christo</b> sunt, lacte et oleo nutriendae&rdquo;</li>
 <li>Bible (Co.3.1) &ldquo;et ego fratres non potui vobis loqui quasi spiritalibus sed quasi carnalibus tamquam <b>parvulis</b> in <b>Christo</b>&rdquo;</li>
@@ -178,8 +178,8 @@
 </ul>
 
 </section>
-<section id="slide-orga242445">
-<h4 id="orga242445">Allusive Text Reuse Example 2</h4>
+<section id="slide-org00bbefd">
+<h4 id="org00bbefd">Allusive Text Reuse Example 2</h4>
 <ul>
 <li>Bernard (Sermo73.6.g) &ldquo;ne forte contingat iustum pro impio conculcari&rdquo;</li>
 <li>Bible (Jn.5.14) &ldquo;[&#x2026;] ecce sanus factus es iam noli peccare ne deterius tibi aliquid contingat&rdquo;</li>
@@ -189,15 +189,15 @@
 </section>
 </section>
 <section data-transition="none">
-<section id="slide-org90646ec" data-transition="none" data-background="#FFFFFF">
-<h3 id="org90646ec">Overlap</h3>
+<section id="slide-orgd4d0b75" data-transition="none" data-background="#FFFFFF">
+<h3 id="orgd4d0b75">Overlap</h3>
 <img src="./images/bernard-overlap.png" class="stretch"/>
 
 </section>
 </section>
 <section>
-<section id="slide-org1681165">
-<h2 id="org1681165"><span class="section-number-2">4</span> Task Description</h2>
+<section id="slide-orgc37bce2">
+<h2 id="orgc37bce2"><span class="section-number-2">4</span> Task Description</h2>
 <ul>
 <li class="fragment roll-in">Two-step process
 <ul>
@@ -212,33 +212,33 @@
 </section>
 </section>
 <section>
-<section id="slide-orgfbab402">
-<h2 id="orgfbab402"><span class="section-number-2">5</span> How difficult is it for humans?</h2>
+<section id="slide-org0477e6d">
+<h2 id="org0477e6d"><span class="section-number-2">5</span> How difficult is it for humans?</h2>
 <span>Highly interpretative, debatable annotation process...</span>
 <span class="fragment roll-in">but how can we model the degree of interpretability?</span>
 
 </section>
 </section>
 <section>
-<section id="slide-org29fc4fa">
-<h3 id="org29fc4fa">Inter-annotator Agreement Experiment</h3>
+<section id="slide-org85dd1b2">
+<h3 id="org85dd1b2">Inter-annotator Agreement Experiment</h3>
 <ul>
 <li>Focus on agreement on query formulation</li>
 
 </ul>
 
 </section>
-<section id="slide-org7394ace" data-transition="none" data-background="#282A36">
-<h4 id="org7394ace"></h4>
+<section id="slide-org4e0eafa" data-transition="none" data-background="#282A36">
+<h4 id="org4e0eafa"></h4>
 <img src="./images/sample.png" class="stretch"/>
 
 </section>
-<section id="slide-orgc4a54e3" data-transition="none" data-background="images/tool.gif">
-<h4 id="orgc4a54e3"></h4>
+<section id="slide-org0447a90" data-transition="none" data-background="images/tool.gif">
+<h4 id="org0447a90"></h4>
 
 </section>
-<section id="slide-org444f7b9">
-<h4 id="org444f7b9">Experimental Conditions</h4>
+<section id="slide-orgefe1e0a">
+<h4 id="orgefe1e0a">Experimental Conditions</h4>
 <ul>
 <li class="fragment roll-in">Guideline: &ldquo;<b>Minimum span</b> that is <b>maximally allusive</b>&rdquo;</li>
 <li class="fragment roll-in">Restrictions
@@ -255,15 +255,15 @@
 </section>
 </section>
 <section>
-<section id="slide-org0333795">
-<h3 id="org0333795">Adapted Kappa</h3>
+<section id="slide-org14ec222">
+<h3 id="org14ec222">Adapted Kappa</h3>
 <p>
 Adapt inter-annotator agreement coefficient from multi-class classification to span selection
 </p>
 
 </section>
-<section id="slide-org796fffd">
-<h4 id="org796fffd">Agreement as overlap</h4>
+<section id="slide-orgbac75df">
+<h4 id="orgbac75df">Agreement as overlap</h4>
 <ul>
 <li class="fragment roll-in">Agreement: tokens shared with the other annotator
 <ul>
@@ -284,8 +284,8 @@ Adapt inter-annotator agreement coefficient from multi-class classification to s
 </ul>
 
 </section>
-<section id="slide-org3098927">
-<h4 id="org3098927">Fleiss&rsquo;s Kappa</h4>
+<section id="slide-orgf0d7a11">
+<h4 id="orgf0d7a11">Fleiss&rsquo;s Kappa</h4>
 <div>
 \begin{equation}
     \kappa = \frac{O_o-O_e}{1-O_e}
@@ -302,8 +302,8 @@ Adapt inter-annotator agreement coefficient from multi-class classification to s
 </p>
 
 </section>
-<section id="slide-orgec56962">
-<h4 id="orgec56962">Results</h4>
+<section id="slide-orgec6df6f">
+<h4 id="orgec6df6f">Results</h4>
 <aside class="notes">
 <ul>
 <li>low wrt assumed standards</li>
@@ -319,8 +319,8 @@ Adapt inter-annotator agreement coefficient from multi-class classification to s
 </p>
 
 </section>
-<section id="slide-orgc7382ea" data-transition="none" data-background="#FFFFFF">
-<h4 id="orgc7382ea"></h4>
+<section id="slide-org71903da" data-transition="none" data-background="#FFFFFF">
+<h4 id="org71903da"></h4>
 <aside class="notes">
 <ul>
 <li>2 modes</li>
@@ -336,8 +336,8 @@ Adapt inter-annotator agreement coefficient from multi-class classification to s
 </section>
 </section>
 <section>
-<section id="slide-org130ea43">
-<h2 id="org130ea43"><span class="section-number-2">6</span> How difficult is it computationally?</h2>
+<section id="slide-org22e244f">
+<h2 id="org22e244f"><span class="section-number-2">6</span> How difficult is it computationally?</h2>
 <p>
 Text Reuse Detection from an Information Retrieval Perspective
 </p>
@@ -352,8 +352,8 @@ Text Reuse Detection from an Information Retrieval Perspective
 </section>
 </section>
 <section>
-<section id="slide-org695a9fc" data-background="#FFFFFF">
-<h3 id="org695a9fc">Information Retrieval Perspective</h3>
+<section id="slide-org2ee21f1" data-background="#FFFFFF">
+<h3 id="org2ee21f1">Information Retrieval Perspective</h3>
 
 <div class="figure">
 <p><img src="./images/IR.png" alt="IR.png" />
@@ -361,8 +361,8 @@ Text Reuse Detection from an Information Retrieval Perspective
 </div>
 
 </section>
-<section id="slide-orga60120c">
-<h4 id="orga60120c">Evaluation</h4>
+<section id="slide-orgd592ef8">
+<h4 id="orgd592ef8">Evaluation</h4>
 <ul>
 <li>Mean Reciprocal Rank: \(MRR(Q) = \frac{1}{|Q|} \sum_{j=1}^{|Q|}\frac{1}{|R_j|}\)</li>
 <li>Accuracy@20</li>
@@ -370,8 +370,8 @@ Text Reuse Detection from an Information Retrieval Perspective
 </ul>
 
 </section>
-<section id="slide-org0f62ad0">
-<h4 id="org0f62ad0">Warning!</h4>
+<section id="slide-orge1a794d">
+<h4 id="orge1a794d">Warning!</h4>
 <ul>
 <li>Interpretation of results must be aware of the artificiality of the task</li>
 <li>Modeling the conditional probability of retrieving a link <b>given a link</b></li>
@@ -382,13 +382,13 @@ Text Reuse Detection from an Information Retrieval Perspective
 </section>
 </section>
 <section>
-<section id="slide-org753dc1c">
-<h3 id="org753dc1c">Methods</h3>
-<div class="outline-text-3" id="text-org753dc1c">
+<section id="slide-org481137f">
+<h3 id="org481137f">Methods</h3>
+<div class="outline-text-3" id="text-org481137f">
 </div>
 </section>
-<section id="slide-org5b9ea1b">
-<h4 id="org5b9ea1b">Purely Lexical</h4>
+<section id="slide-org5172364">
+<h4 id="org5172364">Purely Lexical</h4>
 <p>
 Cosine Distance on count-based <code>BoW</code> (± <code>tf-idf</code>):
 </p>
@@ -399,8 +399,8 @@ Cosine Distance on count-based <code>BoW</code> (± <code>tf-idf</code>):
 </ul>
 
 </section>
-<section id="slide-org7e10712">
-<h4 id="org7e10712">Purely distributional</h4>
+<section id="slide-org0825bd9">
+<h4 id="org0825bd9">Purely distributional</h4>
 <p>
 Cosine Distance on embedding based <code>BoW</code> embeddings (± <code>tf-idf</code>)
 </p>
@@ -415,40 +415,37 @@ Cosine Distance on embedding based <code>BoW</code> embeddings (± <code>tf-idf<
 </p>
 
 </section>
-<section id="slide-org5422ad3">
-<h4 id="org5422ad3">Hybrid (Soft-cosine)</h4>
+<section id="slide-orgff8e258">
+<h4 id="orgff8e258">Hybrid (Soft-cosine)</h4>
 <p>
 A generalization of cosine that allows for the incorporation of semantic similarity in the computation
 </p>
 
 </section>
-<section id="slide-org2ac10e0" data-background="#FFFFFF">
-<h4 id="org2ac10e0">Soft-cosine 1: Cosine</h4>
+<section id="slide-orgbd6d3fe" data-background="#FFFFFF">
+<h4 id="orgbd6d3fe">Soft-cosine</h4>
 
 <div class="figure">
 <p><img src="./images/soft_cosine_tutorial.png" alt="soft_cosine_tutorial.png" />
 </p>
 </div>
 
+</section>
+<section id="slide-org93e0c25">
+<h4 id="org93e0c25">Soft-cosine: Formulation</h4>
+<p>
+Removes the assumption that every feature is completely dissimilar to any other feature
+</p>
 <ul>
 <li class="fragment roll-in">\(cos(d_1, d_2) = \frac{d_1 \cdot d_2}{||d_1||^2 ||d_2||^2}\)</li>
-<li class="fragment roll-in">\(d_1 \cdot d_2 = \sum_i d_{1,i} d_{2,i}\)</li>
+<li class="fragment roll-in">cosine:  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  \(d_1 \cdot d_2 = \sum_i d_{1,i} d_{2,i}\)</li>
+<li class="fragment roll-in">soft-cosine: \(d_1 \cdot d_2 = \sum_{i}\sum_{j} d_{1,i} \boldsymbol{S_{i,j}} d_{2,j}\)</li>
 
 </ul>
 
 </section>
-<section id="slide-orgae53e7c">
-<h4 id="orgae53e7c">Soft-cosine 2: Formulation</h4>
-<p>
-Removes the assumption that every feature is completely dissimilar to any other feature
-</p>
-<p class="fragment (roll-in)">
-\(d_1 \cdot d_2 = \sum_{i}\sum_{j} d_{1,i} \boldsymbol{S_{i,j}} d_{2,j}\)
-</p>
-
-</section>
-<section id="slide-org35a8923">
-<h4 id="org35a8923">Soft-cosine 3: How to estimate S?</h4>
+<section id="slide-org1b6561c">
+<h4 id="org1b6561c">Soft-cosine: How to estimate S?</h4>
 <ul>
 <li>\(SC_{emb}\); \(S_{i,j} = cos(W_i,W_j)\)</li>
 <li>\(SC_{wn}\); \(S_{i,j} = \frac{1}{|T_i \cap T_j|}\)</li>
@@ -458,8 +455,8 @@ Removes the assumption that every feature is completely dissimilar to any other 
 </section>
 </section>
 <section>
-<section id="slide-org789c757" data-background="#FFFFFF">
-<h3 id="org789c757">Results</h3>
+<section id="slide-orgfc8d016" data-background="#FFFFFF">
+<h3 id="orgfc8d016">Results</h3>
 
 <div class="figure">
 <p><img src="./images/results.png" alt="results.png" />
@@ -468,8 +465,8 @@ Removes the assumption that every feature is completely dissimilar to any other 
 
 
 </section>
-<section id="slide-orgd8f0ec0" data-background="#FFFFFF">
-<h4 id="orgd8f0ec0">How important is manual query construction?</h4>
+<section id="slide-org5ce3a22" data-background="#FFFFFF">
+<h4 id="org5ce3a22">How important is manual query construction?</h4>
 
 <div class="figure">
 <p><img src="./images/results_window.png" alt="results_window.png" />
@@ -477,15 +474,15 @@ Removes the assumption that every feature is completely dissimilar to any other 
 </div>
 
 </section>
-<section id="slide-org958aacc">
-<h4 id="org958aacc">How important is the word embedding space?</h4>
+<section id="slide-orgd3cde27">
+<h4 id="orgd3cde27">How important is the word embedding space?</h4>
 <p>
 All spaces trained on a dataset by <a href="http://www.cs.cmu.edu/dbamman/latin.html">D. Bamman</a> (8.5 GB OCR&rsquo;d latin)
 </p>
 
 </section>
-<section id="slide-org33d698d" data-background="#FFFFFF">
-<h4 id="org33d698d"></h4>
+<section id="slide-org808da3c" data-background="#FFFFFF">
+<h4 id="org808da3c"></h4>
 
 <div class="figure">
 <p><img src="./images/results_emb.png" alt="results_emb.png" />
@@ -494,15 +491,15 @@ All spaces trained on a dataset by <a href="http://www.cs.cmu.edu/dbamman/latin.
 
 
 </section>
-<section id="slide-org76d4dbc">
-<h4 id="org76d4dbc">How does semantic information help (visualization)</h4>
+<section id="slide-org216de57">
+<h4 id="org216de57">How does semantic information help (visualization)</h4>
 <p>
 Compute the relative contribution of each word to the total similarity score    
 </p>
 
 </section>
-<section id="slide-org4877b1c" data-background="#FFFFFF">
-<h4 id="org4877b1c"></h4>
+<section id="slide-orgd26a3c9" data-background="#FFFFFF">
+<h4 id="orgd26a3c9"></h4>
 
 <div class="figure">
 <p><img src="./images/visibilis2.png" alt="visibilis2.png" />
@@ -511,8 +508,8 @@ Compute the relative contribution of each word to the total similarity score
 
 
 </section>
-<section id="slide-orgac8d3f7" data-background="#FFFFFF">
-<h4 id="orgac8d3f7"></h4>
+<section id="slide-orgc197f26" data-background="#FFFFFF">
+<h4 id="orgc197f26"></h4>
 
 <div class="figure">
 <p><img src="./images/botrum2.png" alt="botrum2.png" />
@@ -521,8 +518,8 @@ Compute the relative contribution of each word to the total similarity score
 
 
 </section>
-<section id="slide-org21e894a" data-background="#FFFFFF">
-<h4 id="org21e894a"></h4>
+<section id="slide-org2821f85" data-background="#FFFFFF">
+<h4 id="org2821f85"></h4>
 
 <div class="figure">
 <p><img src="./images/descendem2.png" alt="descendem2.png" />
@@ -531,8 +528,8 @@ Compute the relative contribution of each word to the total similarity score
 
 
 </section>
-<section id="slide-org301ac68" data-background="#FFFFFF">
-<h4 id="org301ac68"></h4>
+<section id="slide-org65ad061" data-background="#FFFFFF">
+<h4 id="org65ad061"></h4>
 
 <div class="figure">
 <p><img src="./images/intellexerint2.png" alt="intellexerint2.png" />
@@ -542,8 +539,8 @@ Compute the relative contribution of each word to the total similarity score
 </section>
 </section>
 <section>
-<section id="slide-orgd88532d">
-<h2 id="orgd88532d"><span class="section-number-2">7</span> Conclusions</h2>
+<section id="slide-org478267a">
+<h2 id="org478267a"><span class="section-number-2">7</span> Conclusions</h2>
 <ul>
 <li class="fragment roll-in">Difficulty
 <ul>
